--- a/ArduinoApp/pom.xml
+++ b/ArduinoApp/pom.xml
@@ -51,10 +51,11 @@
       <version>1.2</version>
     </dependency>
   
+    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
     <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.16.0</version>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.13.2</version>
     </dependency>
     </dependencies>
 
